After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 163236 - ROW() exports incorrectly to xls
ROW() exports incorrectly to xls
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export MS Excel (tm)
git master
Other All
: High normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
: 169192 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2005-01-07 14:40 UTC by Morten Welinder
Modified: 2005-03-04 13:21 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Morten Welinder 2005-01-07 14:40:01 UTC
It shows up as #VALUE! when it gets there.
Comment 1 Jody Goldberg 2005-01-09 04:19:13 UTC
Ok, I've traced this.  Fixing it may require a lot of additional data in the xls
exporter.  Luckily OOo may have published that date.  The core of the problem is
that we store
   - function name
   - is the function var arg or fixed arg
   - the types of known args
   - a few extra things we can ignore for the purposes here
For ROW we store
   - it's a vararg
   - The first arg is always a ref

Because we know the type of the arg, we assume that if it is missing, it should
be stored as a missing arg, which for ROW() is wrong

We're going to need to store the min/max number of args for each function.
Comment 2 Jody Goldberg 2005-01-14 07:10:59 UTC
Also 1.5.x
Comment 3 Jody Goldberg 2005-01-17 04:37:41 UTC
ok, I lied.  Getting the data for this was a pain, but the patch it self was
trivial.  Patch is in 1.4.2.
Comment 4 Jody Goldberg 2005-03-04 13:21:32 UTC
*** Bug 169192 has been marked as a duplicate of this bug. ***